GridClassKey
=================================================
- apply default children's settings into plugin
- add fixed column option on grid's setting
- added russian & italian lexicons
- remove spaces on the package's name <http://forums.modx.com/thread/88734/package-version-check#dis-post-489531>
- add OR & AND condition option on Advanced Search window
- fix the filtering on the grid
- fix conditional statement in plugin on "OnDocFormPrerender" event

GridClassKey 1.0.0-rc-1 (February 3, 2014)
=================================================
- [#11] load Rich Text Editor
- [#18] add drag and drop menuindex sorting
- add CMP to overcome loading error of the container if settings break the page
- re-manage folders and files
- fix sorting when the TV has dash
- add columns order in Field's setting by dragging and dropping the row
- [#20] fix column width configuration to work by typecasting it to number
- use field's name for sorting values
- [#28] fix class conflict in resource update and create controllers when using custom manager theme
- tabify the settings
- fix default fields for the first time
- [#25] fix False and Empty returns to empty out the grid
- [#13] fix container's Resource Overview
- [#15] fix broken javascript after creating container
- [#22] custom icon for Container, thx to @eladnova

GridClassKey 1.0.0-beta.3 (December 10, 2013)
=================================================
- [#12] TV's text gets wrong value, should be the "lastSelectionText"

GridClassKey 1.0.0-beta.2 (December 06, 2013)
=================================================
- use modx's core output filter
- use "apply" to all the JS configs
- add advanced search for detailed filtering
- [#3] add resource duplication
- [#8] add "Back to Container" button
- add batch actions to the children's grid
- disable editor when output filter is applied to the cell
- [#6] Grid's setting to replace the "Children" tab's title
- fix properties validation from old version